--- a/OnBoardNode/.gitignore
+++ b/OnBoardNode/.gitignore
@@ -159,10 +159,10 @@ cython_debug/
 
 # hailo-rpi5-examples specific
 venv_TAILS_cv/*
-resources/*.mp4
-resources/*.MP4
-resources/*.hef
-resources/*.so
+resources/*.mp4*
+resources/*.MP4*
+resources/*.hef*
+resources/*.so*
 gstshark*/
 =======
 # Byte-compiled files
