--- a/OnBoardNode/.gitignore
+++ b/OnBoardNode/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -159,12 +158,9 @@ cython_debug/
 
 # hailo-rpi5-examples specific
 venv_TAILS_cv/*
-resources/*.mp4*
-resources/*.MP4*
-resources/*.hef*
-resources/*.so*
+resources/
+*.html
 gstshark*/
-=======
 # Byte-compiled files
 __pycache__/
 hailo_apps_infra/__pycache__/
@@ -191,5 +187,4 @@ dist/
 *.egg-info/
 .cache/
 coverage/
->>>>>>> 6fc8e4a (Initial drop (#3))
 *.csv
